# micropycelium

./: .gitignore  Packager_spec.md  license  make.py  pyproject.toml  readme.md
devices/M5StickC PLUS2/: main.py
devices/M5stamp-Pico/: main.py
devices/generic_esp32/: main.py
espnow/: __init__.py
machine/: __init__.py
micropycelium/: Application.py  Beacon.py  ESPNowInterface.py  Packager.py  Packager_spec.md  __init__.py
micropython/: __init__.py
network/: __init__.py
notes/: adapt_ed25519.md  async_tasks_in_thread.py
tests/: context.py  test_Packager.py
